--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -1,4 +1,4 @@
-<section #results *ngIf="data && totalTax" class="results" (window:resize)="onResize($event)">
+<section #results *ngIf="user && totalTax" class="results" (window:resize)="onResize($event)">
   <div class="results-container">
     <p class="results__hover">
       U betaalt maandelijks
